--- a/build.gradle
+++ b/build.gradle
@@ -63,11 +63,11 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinesVersion"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
 
+    implementation 'com.google.android.material:material:1.3.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
 
     //robolectric setup with espresso
     testImplementation "android.arch.core:core-testing:1.1.1"
